Functional Signup and Login

--- a/trello/templates/trello/dashboard.html
+++ b/trello/templates/trello/dashboard.html
@@ -3,14 +3,14 @@
     <head>
         <title>Trello Clone App</title>
         <link rel="stylesheet" href="{% static 'node_modules/bootstrap/dist/css/bootstrap.css' %}">
-        <link rel="stylesheet" href="{% static 'node_modules/glyphicons/glyphicons.js' %}">
-        <link rel="stylesheet" href="{% static 'css/style.css' %}">
+        <link rel="stylesheet" href="{% static 'css/trello_style.css' %}">
         <script src="{% static 'js/main.js' %}"></script>
     </head>
     <body>
         <div class="page-header bg-warning">
             <h3>{{ user.username }}</h3>
-            <button class="btn"><span id='add-board'>+</span></button>
+            <a href="{% url 'login' %}">Logout</a>
+            <button class="btn"><span id='add-board'></span>+</span></button>
         </div>
         <div class="content-container">
             {% block content %}
