--- a/trello/static/css/trello_style.css
+++ b/trello/static/css/trello_style.css
@@ -5,8 +5,7 @@
 }
 
 .btn{
-    float: right;
-    margin-right: 10px;
+    margin-left: 90%;
     margin-top: -68px;
     font-size: 50px;
     height: 50px;
@@ -16,8 +15,17 @@
     height: 50px;
 }
 
+.page-header a{
+    color: #ffffff;
+    float: right;
+    margin-top: -37px;
+    margin-right: 10px;
+}
+
 h3{
     padding-top: 8px;
     margin-left: 20px;
+    width: 200px;
     color: #ffffff;
 }
+
