--- a/trello/templates/trello/login.html
+++ b/trello/templates/trello/login.html
@@ -6,6 +6,7 @@
             {% csrf_token %}
             {{ form.as_p }}
             <button type="submit" type="submit">Login</button>
+            <a href="{% url 'signup' %}">Signup</a>
         </form>
     </body>
 </html>
