--- a/trello/templates/trello/login.html
+++ b/trello/templates/trello/login.html
@@ -1,3 +1,4 @@
+{% load static %}
 <html>
     <head>
     </head>
@@ -7,6 +8,7 @@
             {{ form.as_p }}
             <button type="submit" type="submit">Login</button>
             <a href="{% url 'signup' %}">Signup</a>
+            <a href="{% url 'password_reset' %}">Forgot Password</a>
         </form>
     </body>
 </html>
